--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "npx ts-node-dev index.ts"
+    "start": "nodemon src/index.ts"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongoose": "^5.12.13",
     "tslint": "^6.1.3",
     "typescript": "^4.3.2"
   },
