--- a/package.json
+++ b/package.json
@@ -4,17 +4,27 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "npx ts-node-dev index.ts"
+    "start": "npx ts-node-dev index.ts",
+    "lint": "tslint -c tslint.json -p tsconfig.json"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^5.12.13",
     "tslint": "^6.1.3",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^15.6.1",
+    "@types/uuid": "^8.3.0",
     "nodemon": "^2.0.7",
     "ts-node-dev": "^1.1.6"
+  },
+  "engines": {
+    "node": ">=14.16"
   }
 }
