--- a/package.json
+++ b/package.json
@@ -7,13 +7,21 @@
     "start": "npx ts-node-dev index.ts"
   },
   "dependencies": {
+    "@types/react-dom": "^17.0.7",
+    "@types/typescript": "^2.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^5.12.13",
     "tslint": "^6.1.3",
     "typescript": "^4.3.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
-    "@types/node": "^15.6.1",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^15.12.2",
+    "@types/react": "^17.0.10",
+    "@types/react-router-dom": "^5.1.7",
     "nodemon": "^2.0.7",
     "ts-node-dev": "^1.1.6"
   }
