--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon src/index.ts",
+    "start": "nodemon src/app.ts",
     "lint": "tslint -c tslint.json -p tsconfig.json"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-validation": "^3.0.8",
+    "helmet": "^4.6.0",
+    "http-status": "^1.5.0",
+    "lodash": "^4.17.21",
     "mongoose": "^5.12.13",
+    "morgan": "^1.10.0",
     "tslint": "^6.1.3",
     "typescript": "^4.3.2",
     "uuid": "^8.3.2"
