--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=8000
 MONGO_DB_URL=mongodb+srv://admin:admin@production.boo04.mongodb.net/Psycare?retryWrites=true&w=majority
+TOKEN_SECRET=TOKEN_SECRET_JWT
