--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-validation": "^3.0.8",
     "helmet": "^4.6.0",
     "http-status": "^1.5.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.12.13",
     "morgan": "^1.10.0",
