--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "nodemon src/app.ts",
-    "lint": "tslint -c tslint.json -p tsconfig.json"
+    "lint": "eslint -c .eslintrc.json *.ts"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -28,8 +28,14 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^15.6.1",
     "@types/uuid": "^8.3.0",
-    "nodemon": "^2.0.7",
-    "ts-node-dev": "^1.1.6"
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/parser": "^4.28.1",
+    "eslint": "^7.30.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "^2.23.4",
+    "nodemon": "^2.0.9",
+    "ts-node-dev": "^1.1.7"
   },
   "engines": {
     "node": ">=14.16"
