--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "class-transformer": "^0.4.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -20,6 +21,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^5.12.13",
     "morgan": "^1.10.0",
+    "socket.io": "^4.1.2",
     "tslint": "^6.1.3",
     "typescript": "^4.3.2",
     "uuid": "^8.3.2"
