--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "nodemon src/app.ts",
-    "lint": "eslint -c .eslintrc.json *.ts"
+    "lint": "eslint -c .eslintrc.json ./src/**/*.ts "
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -41,4 +41,5 @@
   "engines": {
     "node": ">=14.16"
   }
+  
 }
