--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
   },
   "dependencies": {
     "@types/react-dom": "^17.0.7",
+    "@types/simple-peer": "^9.11.0",
+    "@types/socket.io": "^3.0.2",
     "@types/typescript": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.12.13",
+    "peer": "^0.6.1",
+    "socket.io": "^4.1.2",
+    "socketio": "^1.0.0",
     "tslint": "^6.1.3",
     "typescript": "^4.3.2"
   },
