--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "indent": ["warn", 2, {
       "SwitchCase": 1
     }],
+    "linebreak-style": ["error", "windows"],
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
     "import/prefer-default-export": "off",
