--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=8000
 MONGO_DB_URL=mongodb+srv://admin:admin@production.boo04.mongodb.net/Psycare?retryWrites=true&w=majority
 TOKEN_SECRET=TOKEN_SECRET_JWT
+CLOUDINARY_NAME=hoanglong1005
+CLOUDINARY_API_KEY=139527688988163
+CLOUDINARY_API_SECRET=lpZqV_fo-0-1JWofVVKlwBiNQa8
