--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "eslint -c .eslintrc.json ./src/*/*.ts"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.171",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
+    "cloudinary": "^1.26.2",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -19,6 +22,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^5.12.13",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "request": "^2.88.2",
     "ts-node": "^10.1.0",
     "tslint": "^6.1.3",
@@ -29,6 +33,7 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
     "@types/node": "^15.6.1",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
