--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http-status": "^1.5.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "mongodb": "^4.0.1",
     "mongoose": "^5.12.13",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
@@ -32,6 +33,7 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
     "@types/lodash": "^4.14.171",
+    "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
     "@types/node": "^15.6.1",
