--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http-status": "^1.5.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "mongodb": "^4.0.1",
     "mongoose": "^5.12.13",
     "morgan": "^1.10.0",
@@ -44,6 +45,7 @@
     "@types/simple-peer": "^9.11.0",
     "@types/socket.io": "^3.0.2",
     "@types/uuid": "^8.3.0",
+    "@types/moment": "^2.13.0",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
     "eslint": "^7.30.0",
