--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,7 +42,8 @@
     }],
     "lines-between-class-members": "off",
     "arrow-body-style": "off",
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": "off",
+    "linebreak-style": "off"
   },
   "settings": {
     "import/resolver": {
