--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,7 +43,8 @@
     }],
     "lines-between-class-members": "off",
     "arrow-body-style": "off",
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": "off",
+    "import/no-unresolved": "off"
   },
   "settings": {
     "import/resolver": {
