--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ TOKEN_SECRET=TOKEN_SECRET_JWT
 CLOUDINARY_NAME=hoanglong1005
 CLOUDINARY_API_KEY=139527688988163
 CLOUDINARY_API_SECRET=lpZqV_fo-0-1JWofVVKlwBiNQa8
+PSY_CARE_APP_URL=https://psycare.web.app
