--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -15,9 +15,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Install Packages
+      - name: Install packages
         run: yarn install
-      - name: Build Single Page
+      - name: Build tsc
         run: yarn build
       - name: Check ESlint
         run: yarn lint
