--- a/tsconfig.json
+++ b/tsconfig.json
@@ -53,7 +53,7 @@
     /* Module Resolution Options */
     "moduleResolution": "node",
     /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
-    "baseUrl": ".",
+    "baseUrl": "./src",
     /* Base directory to resolve non-absolute module names. */
     "paths": {
       "*": ["src/*", "node_modules/*"]
